2013-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp: 

2013-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* UndoStep.h:
	* UndoStep.cpp:
	* UndoHistory.cpp:
	* X3DBrowserEditor.cpp: 

2013-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* UndoStep.h:
	* UndoStep.cpp:
	* UndoHistory.h:
	* RedoFunction.h:
	* UndoHistory.cpp:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.ui:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2013-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp: 

2013-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp: 

2013-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp: 

2013-11-09  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl: 

2013-11-08  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.ui: 

2013-11-07  Holger Seelig  <holger.seelig@yahoo.de>

	* info.wrl: 

2013-11-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Rotor.x3dv:
	* ExternProto.x3dv: 

2013-11-06  Holger Seelig  <holger.seelig@yahoo.de>

	* White.x3dv:
	* Sunset (weitere Kopie).x3dv: 

2013-10-31  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp: 

2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* style.css:
	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.cpp:
	* Text.x3dv:
	* Rotor.x3dv:
	* IndexedLineSet.x3dv:
	* ExternProto.x3dv: 

2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp: 

2013-10-18  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2013-10-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Delay.x3dv:
	* Rotor.x3dv:
	* RoundedRectangle2D.x3dv: 

2013-10-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Torus.x3dv:
	* Externproto.x3dv: 
